# mktorrent

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: mktorrent.yaml
include/: ftw.h  init.h  mktorrent.h  output.h
src/: hash.c  hash_pthreads.c  init.c  main.c  output.c  sha1.c
tests/: README.md  run_tests.sh  single_file_test.dat.torrent  test_directory.sh  test_error_cases.sh  test_framework.sh  test_interrupt.sh  test_performance.sh  test_single_file.sh  torrent_parser.py
tests/test_results/: dir_comment.torrent  dir_custom_name.torrent  dir_default.torrent  dir_multi_announce.torrent  error_announce.torrent  existing.torrent
